Fix cutoff background image when screen is too short

--- a/less/languagePicker.less
+++ b/less/languagePicker.less
@@ -1,14 +1,12 @@
 // Language Picker standalone page
 // --------------------------------------------------
 .languagepicker {
+  position: relative;
   min-height: 100vh;
 
   &.has-bg-image > .background {
     position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
+    inset: 0;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center top;
